--- a/MistServerScripting/.gitignore
+++ b/MistServerScripting/.gitignore
@@ -44,7 +44,7 @@
 # User-specific files
 *.rsuser
 *.suo
-#*.user
+*.user
 *.userosscache
 *.sln.docstates
 
@@ -615,4 +615,4 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,c++,csharp
 
 Symbol.h
-# launchSettings.json
+launchSettings.json
