--- a/Tools/umodel.cfg
+++ b/Tools/umodel.cfg
@@ -1,6 +1,6 @@
 Export =
 {
-    ExportPath = "D:\Giochi\Last Oasis\UnrealPakTool\Unpacked_Client"
+    ExportPath = "D:\Giochi\Last Oasis\Modding\LO Mods\Tools\Unpacked_Client"
     ExportDdsTexture = true
     SkeletalMeshFormat = 2
     StaticMeshFormat = 2
