--- a/Tools/UAssetGUI.exe.config
+++ b/Tools/UAssetGUI.exe.config
@@ -1,33 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="UAssetGUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <userSettings>
-        <UAssetGUI.Properties.Settings>
-            <setting name="PreferredVersion" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Theme" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="MapStructTypeOverride" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="FavoriteThing" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="ChangeValuesOnScroll" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="DataZoom" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="EnableDiscordRPC" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </UAssetGUI.Properties.Settings>
-    </userSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Resources.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
