--- a/Tools/umodel.cfg
+++ b/Tools/umodel.cfg
@@ -12,7 +12,7 @@ Export =
 }
 SavePackages =
 {
-    SavePath = "D:\Giochi\Last Oasis\UnrealPakTool\saved"
+    SavePath = "D:\Giochi\Last Oasis\Modding\LO Mods\Tools\saved"
     KeepDirectoryStructure = true
 }
 bShowExportOptions = false
