--- a/Tools/umodel.cfg
+++ b/Tools/umodel.cfg
@@ -1,7 +1,7 @@
 Export =
 {
     ExportPath = "D:\Giochi\Last Oasis\Modding\LO Mods\Tools\Unpacked_Client"
-    ExportDdsTexture = true
+    ExportDdsTexture = false
     SkeletalMeshFormat = 2
     StaticMeshFormat = 2
     TextureFormat = 2
