--- a/Tools/umodel.cfg
+++ b/Tools/umodel.cfg
@@ -1,6 +1,6 @@
 Export =
 {
-    ExportPath = "D:\Giochi\Last Oasis\Modding\LO Mods\Tools\Unpacked_Client_S5"
+    ExportPath = "D:\Giochi\Last Oasis\Modding\LO Mods\Tools\Unpacked_Client"
     ExportDdsTexture = false
     SkeletalMeshFormat = 2
     StaticMeshFormat = 2
