--- a/Tools/umodel.cfg
+++ b/Tools/umodel.cfg
@@ -5,7 +5,7 @@ Export =
     SkeletalMeshFormat = 2
     StaticMeshFormat = 2
     TextureFormat = 2
-    ExportMeshLods = true
+    ExportMeshLods = false
     SaveUncooked = false
     SaveGroups = false
     DontOverwriteFiles = true
