update fast packer

--- a/Tools/umodel.cfg
+++ b/Tools/umodel.cfg
@@ -2,10 +2,10 @@ Export =
 {
     ExportPath = "D:\Giochi\Last Oasis\Modding\LO Mods\Tools\Unpacked_Client"
     ExportDdsTexture = false
-    SkeletalMeshFormat = 2
-    StaticMeshFormat = 2
+    SkeletalMeshFormat = 0
+    StaticMeshFormat = 0
     TextureFormat = 2
-    ExportMeshLods = false
+    ExportMeshLods = true
     SaveUncooked = false
     SaveGroups = false
     DontOverwriteFiles = true
