--- a/Tools/UEAssetToolkitGeneratorv0.1.2/Project/FBX-Wrapper/.gitignore
+++ b/Tools/UEAssetToolkitGeneratorv0.1.2/Project/FBX-Wrapper/.gitignore
@@ -1,36 +1,4 @@
-.idea/
-
-lib/vs2019/arm64/
-lib/vs2019/x86/
-lib/vs2019/x64/debug/
-lib/vs2019/x64/release/*
-!lib/vs2019/x64/release/libfbxsdk.dll
-!lib/vs2019/x64/release/libfbxsdk.lib
-
-# Ignore all in cmake-build-debug except FBX_Wrapper.dll
-cmake-build-debug/*
-!cmake-build-debug/FBX_Wrapper.dll
-cmake-build-release/*
-!cmake-build-release/FBX_Wrapper.dll
-!cmake-build-release/FBX_Wrapper.lib
-cmake_install.cmake
-
-CMakeFiles/
-
 x64/
-
 Debug/
-
 .vs/
-
-FBX_Wrapper.dir/
-
-CMakeCache.txt
-
-Release/FBX_Wrapper.exp
-
-Release/FBX_Wrapper.lib
-
-FBX_Wrapper_Test.vcxproj
-
-FBX_Wrapper_Test.vcxproj.filters
+Release/
