--- a/Tools/UEAssetToolkitGeneratorv0.1.2/Project/FBX-Wrapper/FBX_Wrapper.vcxproj
+++ b/Tools/UEAssetToolkitGeneratorv0.1.2/Project/FBX-Wrapper/FBX_Wrapper.vcxproj
@@ -90,6 +90,7 @@
       <AdditionalOptions>%(AdditionalOptions) /machine:x64</AdditionalOptions>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
+      <ImportLibrary>Debug/FBX_Wrapper.lib</ImportLibrary>
       <ProgramDataBaseFile>Debug/FBX_Wrapper.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
     </Link>
@@ -131,6 +132,7 @@
       <AdditionalOptions>%(AdditionalOptions) /machine:x64</AdditionalOptions>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
+      <ImportLibrary>Release/FBX_Wrapper.lib</ImportLibrary>
       <ProgramDataBaseFile>Release/FBX_Wrapper.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
     </Link>
@@ -143,23 +145,6 @@
     <ClCompile Include="GenerateSmoothingGroups.cpp" />
     <ClCompile Include="JsonDeserializer.cpp" />
     <ClCompile Include="FbxDataConverter.cpp" />
-    <ClCompile Include="Test.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="AnimSequenceStructs.h" />
-    <ClInclude Include="FbxDataConverter.h" />
-    <ClInclude Include="GenerateSmoothingGroups.h" />
-    <ClInclude Include="JsonDeserializer.h" />
-    <ClInclude Include="library.h" />
-    <ClInclude Include="SKMStructs.h" />
-    <ClInclude Include="SKStructs.h" />
-    <ClInclude Include="SMStructs.h" />
-    <ClInclude Include="UEStructs.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Debug\FBX_Wrapper.dll" />
-    <None Include="Debug\FBX_Wrapper.exp" />
-    <None Include="Debug\FBX_Wrapper.pdb" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
