--- a/Tools/UEAssetToolkitGeneratorv0.1.2/Project/FBX-Wrapper/FBX_Wrapper.vcxproj
+++ b/Tools/UEAssetToolkitGeneratorv0.1.2/Project/FBX-Wrapper/FBX_Wrapper.vcxproj
@@ -132,8 +132,8 @@
       <AdditionalOptions>%(AdditionalOptions) /machine:x64</AdditionalOptions>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <ImportLibrary>Release/FBX_Wrapper.lib</ImportLibrary>
-      <ProgramDataBaseFile>Release/FBX_Wrapper.pdb</ProgramDataBaseFile>
+      <ImportLibrary>Debug/FBX_Wrapper.lib</ImportLibrary>
+      <ProgramDataBaseFile>Debug/FBX_Wrapper.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
     </Link>
     <ProjectReference>
