--- a/Tools/umodel.cfg
+++ b/Tools/umodel.cfg
@@ -1,6 +1,6 @@
 Export =
 {
-    ExportPath = "D:\Giochi\Last Oasis\Modding\LO Mods\Tools\Unpacked_Client"
+    ExportPath = "F:\Giochi\Last Oasis\Modding\LO Mods\Tools\Unpacked_Client"
     ExportDdsTexture = false
     SkeletalMeshFormat = 0
     StaticMeshFormat = 0
@@ -12,7 +12,7 @@ Export =
 }
 SavePackages =
 {
-    SavePath = "D:\Giochi\Last Oasis\Modding\LO Mods\Tools\saved"
+    SavePath = "F:\Giochi\Last Oasis\Modding\LO Mods\Tools\saved"
     KeepDirectoryStructure = true
 }
 bShowExportOptions = false
