--- a/Tools/umodel.cfg
+++ b/Tools/umodel.cfg
@@ -1,9 +1,9 @@
 Export =
 {
-    ExportPath = "F:\Giochi\Last Oasis\Modding\LO Mods\Tools\Unpacked_Client"
+    ExportPath = "G:\Giochi\Last Oasis\Modding\LO Mods\Tools\Unpacked_Client"
     ExportDdsTexture = false
-    SkeletalMeshFormat = 0
-    StaticMeshFormat = 0
+    SkeletalMeshFormat = 2
+    StaticMeshFormat = 2
     TextureFormat = 2
     ExportMeshLods = false
     SaveUncooked = false
@@ -12,7 +12,7 @@ Export =
 }
 SavePackages =
 {
-    SavePath = "F:\Giochi\Last Oasis\Modding\LO Mods\Tools\saved"
+    SavePath = "G:\Giochi\Last Oasis\Modding\LO Mods\Tools\saved"
     KeepDirectoryStructure = true
 }
 bShowExportOptions = false
